--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.21",
     "monaco-editor": "^0.27.0",
     "pinia": "^2.0.5",
+    "sass": "^1.54.5",
     "vue": "^3.0.0",
     "vue-grid-layout": "^3.0.0-beta1",
     "vue-i18n": "^9.1.9",
@@ -54,7 +55,6 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.1.3",
     "monaco-editor-webpack-plugin": "^4.1.2",
-    "node-sass": "^6.0.1",
     "postcss-html": "^1.3.0",
     "postcss-scss": "^4.0.2",
     "prettier": "^2.2.1",
